--- a/CosmosFramework4Server/CosmosFramework4Server.csproj
+++ b/CosmosFramework4Server/CosmosFramework4Server.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\CosmosFramework\CosmosFramework.csproj" />
   </ItemGroup>
